--- a/po/fa.po
+++ b/po/fa.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2024-02-26 10:32+0100\n"
 "PO-Revision-Date: 2024-02-26 10:36+0100\n"
 "Last-Translator: Christian Beier <info@christianbeier.net>\n"
-"Language-Team: \n"
+"Language-Team: Mohamad Balkhi <ahmdparsh129@gmail.com>\n"
 "Language: fa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
