--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: Gromit-MPX\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-03-02 22:42+0100\n"
-"PO-Revision-Date: 2024-03-02 22:44+0100\n"
-"Last-Translator: Christian Beier <info@christianbeier.net>\n"
+"PO-Revision-Date: 2024-03-23 02:11-0700\n"
+"Last-Translator: Bruno Cabral <cabral.brc@gmail.com>\n"
 "Language-Team: Renato Lima <natenho@gmail.com>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.4\n"
 
 #: ../src/callbacks.c:791
 msgid "About Gromit-MPX"
@@ -39,7 +39,8 @@ msgid ""
 msgstr ""
 "Gostaria de mostrar esta introdução novamente na próxima vez que iniciar o "
 "Gromit-MPX? \n"
-"Você sempre pode acessar novamente através do menu de bandeja do sistema.\n"
+"Você sempre pode acessar novamente através da área de notificação do "
+"sistema.\n"
 
 #: ../src/config.c:473
 #, c-format
@@ -52,11 +53,11 @@ msgstr ""
 msgid ""
 "Gromit-MPX (GRaphics Over MIscellaneous Things - Multi-Pointer-EXtension) is "
 "an on-screen annotation tool that works with any Unix desktop environment "
-"under X11 as well as Wayland."
+"under X11 as well as Wayland.\n"
 msgstr ""
 "Gromit-MPX (GRaphics Over MIscellaneous Things - Multi-Pointer-EXtension) é "
 "uma ferramenta de anotação em tela que funciona em qualquer ambiente desktop "
-"Unix X11 bem como Wayland."
+"Unix X11 bem como Wayland.\n"
 
 #: ../src/callbacks.c:817
 msgid ""
@@ -72,20 +73,18 @@ msgid ""
 "its development by using one of the donation options on the project's\n"
 "website or directly via the support options available from the tray menu.\n"
 msgstr ""
-"Gromit-MPX (GRaphics Over MIscellaneous Things) é uma pequena ferramenta "
-"para fazer\n"
-"anotações na tela\n"
+"Gromit-MPX (GRaphics Over MIscellaneous Things) é uma pequena ferramenta \n"
+"para fazer anotações na tela\n"
 "\n"
-"Usada principalmente para fazer apresentações de algum aplicativo. "
-"Normalmente\n"
-"você tem que mover o cursor do mouse ao redor do ponto de interesse\n"
-"esperando que alguém o note. Com o Gromit-MPX, você pode desenhar\n"
-"por toda a tela, destacando algum botão ou área.\n"
+"Usada principalmente para fazer apresentações de algum aplicativo.\n"
+"Normalmente você tem que mover o cursor do mouse ao redor do ponto de\n"
+"interesse esperando que alguém o note. Com o Gromit-MPX, você pode\n"
+"desenhar por toda a tela, destacando algum botão ou área.\n"
 "\n"
 "Se por acaso gostar de usar o Gromit-MPX, por favor considere apoiar\n"
 "o desenvolvimento através de uma das opções de doação no website\n"
-"do projeto ou diretamente pelas opções de suporte disponíveis no menu de "
-"bandeja\n"
+"do projeto ou diretamente pelas opções de suporte disponíveis na área de\n"
+"notificação.\n"
 
 #: ../src/callbacks.c:851
 msgid "Gromit-MPX - How to use it"
@@ -168,29 +167,29 @@ msgid ""
 "   undo last stroke:        %s\n"
 "   redo last undone stroke: SHIFT-%s</b></tt>"
 msgstr ""
-"Você pode operar Gromit-MPX usando o ícone da bandeja (se seu ambiente\n"
-"desktop prover uma bandeja), mas já que você normalmente quer usar o "
-"programa\n"
-"que está demonstrando e destacar algo é uma pequena interrupção do seu "
-"fluxo\n"
-"de trabalho, Gromit-MPX pode ser ativado/desativado usando teclas de "
+"Você pode operar Gromit-MPX usando o ícone de notificação (se seu ambiente\n"
+"desktop prover uma área de notificação), mas já que você normalmente quer\n"
+"usar o programa que está demonstrando e destacar algo é uma pequena "
+"interrupção\n"
+"do seu fluxo de trabalho, Gromit-MPX pode ser ativado/desativado usando "
+"teclas de\n"
 "atalho:\n"
 "\n"
-"As teclas `%s` e `%s` são associadas, então nenhum outro aplicativo pode usá-"
+"As teclas `%s` e `%s` são travadas, então nenhum outro aplicativo pode usá-"
 "las\n"
 "e estarão disponíveis somente para o Gromit-MPX. Os comandos disponíveis "
 "são:\n"
 "\n"
-"<tt><b> ativar/desativar desenho         %s\n"
-"   limpar tela:            SHIFT-%s\n"
-"   mostrar/esconder desenho:       CTRL-%s\n"
-"   sair:                    ALT-%s\n"
-"   desfazer último traço:        %s\n"
+"<tt><b>   ativar/desativar desenho       %s\n"
+"   limpar tela:                   SHIFT-%s\n"
+"   mostrar/esconder desenho:      CTRL-%s\n"
+"   sair:                          ALT-%s\n"
+"   desfazer último traço:         %s\n"
 "   refazer último traço desfeito: SHIFT-%s</b></tt>"
 
 #: ../src/main.c:809
 msgid "_About"
-msgstr "S_obre"
+msgstr "_Sobre"
 
 #: ../src/main.c:806
 msgid "_Introduction"
@@ -203,7 +202,7 @@ msgstr "_Sair (ALT-%s)"
 
 #: ../src/main.c:807
 msgid "_Report Bug / Request Feature"
-msgstr "_Reportar bug/recurso de solicitação"
+msgstr "_Reportar Bug / Sugestões"
 
 #: ../src/main.c:808
 msgid "_Support Gromit-MPX"
