Added CIRCLE support

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@ avma <avi.markovitz@gmail.com>
 godmar <godmar@gmail.com>
 Ashwin Rajesh <46510831+VanillaViking@users.noreply.github.com>
 Pascal Niklaus <pascal.niklaus@ieu.uzh.ch>
+Marcin Orlowski <mail@marcinOrlowski.com>
