--- a/AUTHORS
+++ b/AUTHORS
@@ -23,4 +23,10 @@ avma <avi.markovitz@gmail.com>
 godmar <godmar@gmail.com>
 Ashwin Rajesh <46510831+VanillaViking@users.noreply.github.com>
 Pascal Niklaus <pascal.niklaus@ieu.uzh.ch>
+Renato Lima <natenho@gmail.com>
+yzemaze <dev@yzemaze.de>
+woodhead2019 <52210283+woodhead2019@users.noreply.github.com>
+Leonardo Taccari <leot@NetBSD.org>
+Andrew Marshall <andrew@johnandrewmarshall.com>
+gavine99 <63904295+gavine99@users.noreply.github.com>
 Marcin Orlowski <mail@marcinOrlowski.com>
